Compress mappings and insert license.